[Nav Experiment] Skip native error if URL is blocked by content filter.

When a URL is blocked due to Restrictions settings, WKWebView triggers
|webView:didFailProvisionalNavigation| and automatically triggers a
second navigation that loads an error page. Without this change, Chrome
injects an extra navigation entry for displaying native error, which
shows up after the system "Access Restricted" error.

Bug: 831381,793317
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Iaafcc8f1c5abde120ad10d0794832ab09abeec6d
Reviewed-on: https://chromium-review.googlesource.com/1012470
Reviewed-by: Eugene But <eugenebut@chromium.org>
Commit-Queue: Danyao Wang <danyao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550898}
Former-commit-id: 2233628f5f5b32c7b458428f8d5cfbd0a18be82e